src/test/resources/lab2-samples/bad1.out

*** Error line 1.
void foo(int) {
            ^
*** syntax error

